tests/tldk/error/error-tldk-test-error13.pkt
// Establish a connection.
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0

+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0


+0  < S 0:0(0) win 32792 <mss 1000,sackOK,TS val 1000 ecr 0,nop,wscale 7>
+0 ~ +1  > S. 0:0(0) ack 1 <...>

+.1 < . 1:1(0) ack 1 win 32792 <mss 1000,sackOK,TS val 1000 ecr 0,nop,wscale 7>
+0 accept(3, ..., ...) = 4
+0 fcntl(4, F_SETFL, O_RDWR|O_NONBLOCK) = 0

+0 < . 1:3962(3961) ack 1 win 28535 

+0 < . 3962:5495(1533) ack 1 win 11568 <nop,sackOK,eol>

+0 < . 3962:5495(1533) ack 1 win 56797 

+0 < . 3962:5495(1533) ack 1 win 56797 

+0 < . 3962:9582(5620) ack 1 win 56797 <TS val 758264625 ecr 1000,eol,eol>

+0 ~ +1 > . 1:1(0) ack 1 <nop,nop,TS val 758264625 ecr 1000>
